8313905: Checked_cast assert in CDS compare_by_loader

Reviewed-by: dlong, iklam